--- a/index.html
+++ b/index.html
@@ -1,49 +1,24 @@
 <!DOCTYPE html>
-<html lang="">
-
+<html lang="en">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <style>
-        body {
-            background: purple;
-        }
-
-        .shakeCSS {
-            animation: shakeItBaby 1s infinite;
-
-        }
-
-
-        @keyframes shakeItBaby {
-            25% {
-                transform: translateX(-10px)
-            }
-            75% {
-                transform: translateX(10px)
-            }
-        }
-
-    </style>
-    <title></title>
+    <title>cohete_1</title>
+    <link rel="stylesheet" href="a_style.css">
 </head>
 
 <body>
-    <img class="hero" src="hero.png" alt="hero.png">
-    <button class="shake">Shake</button>
+<img class="rocket" src="rocket.png" alt="rocket">
+<button class="start_button">Start</button>
     <script>
-        let char = document.querySelector("img.hero");
-        let shakeButton = document.querySelector(".shake");
-        shakeButton.addEventListener('click', makeShake);
+        let imagen = document.querySelector(".rocket");
+        let inicia_button = document.querySelector(".start_button");
+        inicia_button.addEventListener('click', empieza_vuela);
 
-        function makeShake(){
-            console.log("make shake");
-            char.classList.toggle("shakeCSS");
+        function empieza_vuela(){
+            imagen.classList.toggle("animacion_vuela");
         }
 
     </script>
-
-
 </body>
-
 </html>
