--- a/index.html
+++ b/index.html
@@ -10,15 +10,6 @@
 <body>
 <img class="rocket" src="rocket.png" alt="rocket">
 <button class="start_button">Start</button>
-    <script>
-        let imagen = document.querySelector(".rocket");
-        let inicia_button = document.querySelector(".start_button");
-        inicia_button.addEventListener('click', empieza_vuela);
-
-        function empieza_vuela(){
-            imagen.classList.toggle("animacion_vuela");
-        }
-
-    </script>
+    <script src="a_script.js"></script>
 </body>
 </html>
