--- a/animacion_2/index.html
+++ b/animacion_2/index.html
@@ -4,12 +4,13 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>cohete_1</title>
-    <link rel="stylesheet" href="a_style.css">
+    <link rel="stylesheet" href="css_style.css">
 </head>
 
 <body>
 <img class="rocket" src="rocket.png" alt="rocket">
-<button class="start_button">Start</button>
-    <script src="a_script.js"></script>
+<button class="start_button">Start / Stop</button>
+<button class="rotacion_button">Rota Start / Stop</button>
+    <script src="js_script.js"></script>
 </body>
 </html>
