--- a/animacion_2/index.html
+++ b/animacion_2/index.html
@@ -11,6 +11,7 @@
 <img class="rocket" src="rocket.png" alt="rocket">
 <button class="start_button">Start / Stop</button>
 <button class="rotacion_button">Rota Start / Stop</button>
+<button class="moveTo30_button">moveTo30 Start / Stop</button>
     <script src="js_script.js"></script>
 </body>
 </html>
