--- a/animacion_2/index.html
+++ b/animacion_2/index.html
@@ -12,6 +12,7 @@
 <button class="start_button">Start / Stop</button>
 <button class="rotacion_button">Rota Start / Stop</button>
 <button class="moveTo30_button">moveTo30 Start / Stop</button>
+<button class="moveFrom30_button">moveFrom30 Start / Stop</button>
     <script src="js_script.js"></script>
 </body>
 </html>
