--- a/animacion_2/index.html
+++ b/animacion_2/index.html
@@ -13,6 +13,9 @@
 <button class="rotacion_button">Rota Start / Stop</button>
 <button class="moveTo30_button">moveTo30 Start / Stop</button>
 <button class="moveFrom30_button">moveFrom30 Start / Stop</button>
+<button class="oneJump_button">oneJump Start / Stop</button>
+<button class="jumping_button">jumping Start / Stop</button>
+<button class="fadeIn_button">fadeIn Start / Stop</button>
     <script src="js_script.js"></script>
 </body>
 </html>
