--- a/animacion_2/index.html
+++ b/animacion_2/index.html
@@ -16,6 +16,9 @@
 <button class="oneJump_button">oneJump Start / Stop</button>
 <button class="jumping_button">jumping Start / Stop</button>
 <button class="fadeIn_button">fadeIn Start / Stop</button>
+<button class="moveLeft_button">moveLeft Start / Stop</button>
+<button class="moveRight_button">moveRight Start / Stop</button>
+<button class="screenTrip_button">screenTrip Start / Stop</button>
     <script src="js_script.js"></script>
 </body>
 </html>
