--- a/animacion_2/index.html
+++ b/animacion_2/index.html
@@ -8,17 +8,21 @@
 </head>
 
 <body>
+<main>
 <img class="rocket" src="rocket.png" alt="rocket">
-<button class="start_button">Start / Stop</button>
-<button class="rotacion_button">Rota Start / Stop</button>
-<button class="moveTo30_button">moveTo30 Start / Stop</button>
-<button class="moveFrom30_button">moveFrom30 Start / Stop</button>
-<button class="oneJump_button">oneJump Start / Stop</button>
-<button class="jumping_button">jumping Start / Stop</button>
-<button class="fadeIn_button">fadeIn Start / Stop</button>
-<button class="moveLeft_button">moveLeft Start / Stop</button>
-<button class="moveRight_button">moveRight Start / Stop</button>
-<button class="screenTrip_button">screenTrip Start / Stop</button>
+    <div class=control_panel>
+        <button class="start_button">Start / Stop</button>
+        <button class="rotacion_button">Rota Start / Stop</button>
+        <button class="moveTo30_button">moveTo30 Start / Stop</button>
+        <button class="moveFrom30_button">moveFrom30 Start / Stop</button>
+        <button class="oneJump_button">oneJump Start / Stop</button>
+        <button class="jumping_button">jumping Start / Stop</button>
+        <button class="fadeIn_button">fadeIn Start / Stop</button>
+        <button class="moveLeft_button">moveLeft Start / Stop</button>
+        <button class="moveRight_button">moveRight Start / Stop</button>
+        <button class="screenTrip_button">screenTrip Start / Stop</button>
+    </div>
+</main>
     <script src="js_script.js"></script>
 </body>
 </html>
